# LoanTracker

./: .gitignore  README.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/credit-rating/: Cargo.toml
contracts/credit-rating/src/: lib.rs  test.rs
contracts/credit-rating/test_snapshots/test/: test_credit_rating.1.json
contracts/loan-protocol/: Cargo.toml
contracts/loan-protocol/src/: lib.rs  test.rs
contracts/loan-protocol/test_snapshots/test/: test_loan_lifecycle.1.json
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: dashboard.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/api/fund/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  WalletConnect.tsx
frontend/src/lib/: soroban.ts
frontend/src/store/: wallet.ts
scripts/: deploy.sh
